# lox-interpreter

./: .gitignore  README.md  out.txt
CLox/: CMakeLists.txt
CLox/src/: main.c
CLox/src/compiler/: compiler.c  scanner.c
CLox/src/disassembler/: debug.c
CLox/src/include/: chunk.h  common.h  memory.h  table.h  value.h
CLox/src/tools/: CMakeLists.txt
CLox/src/utils/: chunk.c  memory.c  table.c  value.c
CLox/src/vm/: object.c  vm.c
Lox_Compiler_Collection/: CMakeLists.txt
Lox_Compiler_Collection/src/: CMakeLists.txt  main.cpp
Lox_Compiler_Collection/src/compiler/: CMakeLists.txt  Compiler.cpp  ErrorReporter.cpp  Parser.cpp  PrecedenceParser.cpp  Scanner.cpp  StatementBuilder.cpp  Token.cpp
Lox_Compiler_Collection/src/disassembler/: CMakeLists.txt  lineinfo.c
Lox_Compiler_Collection/src/include/: Common.h  chunk.h  common.h  memory.h  table.h  value.h
Lox_Compiler_Collection/src/tools/: CMakeLists.txt
Lox_Compiler_Collection/src/utils/: CMakeLists.txt  chunk.c  table.c  value.c
Lox_Compiler_Collection/src/vm/: CMakeLists.txt  vm.c
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.in
tests/assignment/: associativity.lox  global.lox  grouping.lox  infix_operator.lox  prefix_operator.lox  to_this.lox
tests/block/: empty.lox
tests/bool/: equality.lox
tests/call/: bool.lox  nil.lox  string.lox
tests/class/: inherit_self.lox  inherited_method.lox  local_inherit_other.lox  local_inherit_self.lox
tests/closure/: assign_to_shadowed_later.lox  close_over_later_variable.lox  open_closure_in_function.lox  reference_closure_multiple_times.lox  reuse_closure_slot.lox  shadow_closure_with_local.lox  unused_closure.lox  unused_later_closure.lox
tests/comments/: only_line_comment_and_line.lox
tests/constructor/: call_init_early_return.lox  default.lox  init_not_method.lox  missing_arguments.lox  return_value.lox
tests/field/: get_on_bool.lox  method.lox  set_on_bool.lox  set_on_num.lox
tests/for/: closure_in_body.lox  fun_in_body.lox  return_closure.lox  return_inside.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  syntax.lox  var_in_body.lox
tests/function/: body_must_be_block.lox  empty_body.lox  extra_arguments.lox  local_mutual_recursion.lox  missing_comma_in_parameters.lox  nested_call_with_arguments.lox  too_many_arguments.lox  too_many_parameters.lox
tests/general/: empty_file.lox  unexpected_character.lox
tests/if/: class_in_else.lox  class_in_then.lox  dangling_else.lox  else.lox  fun_in_else.lox  fun_in_then.lox  var_in_else.lox  var_in_then.lox
tests/inheritance/: inherit_from_nil.lox  parenthesized_superclass.lox
tests/interpreter/assignment/: syntax.lox  to_this.lox  undefined.lox
tests/interpreter/block/: scope.lox
tests/interpreter/bool/: not.lox
tests/interpreter/call/: num.lox  object.lox
tests/interpreter/class/: local_reference_self.lox  reference_self.lox
tests/interpreter/closure/: assign_to_closure.lox  close_over_function_parameter.lox
tests/interpreter/constructor/: early_return.lox  extra_arguments.lox  return_in_nested_function.lox
tests/interpreter/field/: call_function_field.lox  call_nonfunction_field.lox  get_and_set_method.lox  get_on_nil.lox  get_on_num.lox  method_binds_this.lox  set_evaluation_order.lox  undefined.lox
tests/interpreter/for/: class_in_body.lox  scope.lox  statement_initializer.lox
tests/interpreter/function/: local_recursion.lox  missing_arguments.lox  mutual_recursion.lox  print.lox
tests/interpreter/general/: unexpected_character.lox
tests/interpreter/if/: fun_in_else.lox  if.lox
tests/interpreter/inheritance/: parenthesized_superclass.lox  set_fields_from_base_class.lox
tests/interpreter/limit/: loop_too_large.lox  no_reuse_constants.lox  stack_overflow.lox  too_many_constants.lox
tests/interpreter/logical_operator/: and.lox  or.lox
tests/interpreter/method/: missing_arguments.lox  print_bound_method.lox  too_many_parameters.lox
tests/interpreter/operator/: add_bool_nil.lox  add_bool_num.lox  add_string_nil.lox  equals.lox  equals_class.lox  greater_num_nonnum.lox  greater_or_equal_num_nonnum.lox  less_or_equal_nonnum_num.lox  less_or_equal_num_nonnum.lox  multiply_nonnum_num.lox  negate.lox  negate_nonnum.lox  not_class.lox  subtract.lox  subtract_num_nonnum.lox
tests/interpreter/regression/: 394.lox
tests/interpreter/return/: after_while.lox  at_top_level.lox  in_function.lox  return_nil_if_no_value.lox
tests/interpreter/string/: multiline.lox
tests/interpreter/super/: closure.lox  extra_arguments.lox  indirectly_inherited.lox  missing_arguments.lox  no_superclass_method.lox  reassign_superclass.lox  super_in_top_level_function.lox  super_without_name.lox
tests/interpreter/this/: closure.lox  nested_class.lox
tests/interpreter/variable/: in_nested_block.lox  local_from_method.lox  shadow_and_local.lox  shadow_global.lox  shadow_local.lox  undefined_global.lox  unreached_undefined.lox  use_global_in_initializer.lox  (+1 more)
tests/limit/: too_many_locals.lox  too_many_upvalues.lox
tests/method/: arity.lox  too_many_arguments.lox  too_many_parameters.lox
tests/number/: decimal_point_at_eof.lox  nan_equality.lox
tests/operator/: add.lox  add_bool_string.lox  add_num_nil.lox  comparison.lox  divide.lox  divide_num_nonnum.lox  equals_method.lox  multiply_num_nonnum.lox  not.lox  not_equals.lox
tests/print/: missing_argument.lox
tests/return/: in_method.lox
tests/string/: literals.lox  unterminated.lox
tests/super/: bound_method.lox  call_other_method.lox  call_same_method.lox  constructor.lox  no_superclass_bind.lox  no_superclass_call.lox  parenthesized.lox  super_at_top_level.lox  super_in_closure_in_inherited_method.lox  super_in_inherited_method.lox  super_without_dot.lox
tests/this/: this_in_method.lox
tests/variable/: collide_with_parameter.lox  duplicate_parameter.lox  redeclare_global.lox  redefine_global.lox  scope_reuse_in_different_blocks.lox  use_false_as_var.lox  use_local_in_initializer.lox  use_nil_as_var.lox  use_this_as_var.lox
tests/while/: class_in_body.lox  fun_in_body.lox  var_in_body.lox
(+359 files in other folders)
